# B3_ryouiki_program

./: .cache  README.md  pyproject.toml  spotify_recently_played.csv
src/: main.py
src/main/: filtering.py  import_music_data.py
src/temp/: test.js  test.py  test.xml  test_filtering.py
